Fix overflow x

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -13,6 +13,15 @@ h5.ant-typography {
   font-family: "Open Sans", sans-serif;
 }
 
+body {
+  background-color: #f1f1f1;
+  width: 100vw;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .description {
   margin-left: 10vw;
   margin-right: 10vw;
